NIHVIVO-1838: In temporal graph visualization page, I have fixed the vertical alignment for the temporal graph icons located under Total Number of Publications section.

--- a/themes/wilma/css/ie6.css
+++ b/themes/wilma/css/ie6.css
@@ -151,6 +151,9 @@ input#submit:visited {
 .toggle_visualization{
     position: relative;
 }
+.easy-deselect-label a.temporal-vis-url {
+    margin-top: -15px;
+}
 #grant-count-sparkline-include {
     width: 48%;
 }
